--- a/basic/web/css/site.css
+++ b/basic/web/css/site.css
@@ -108,3 +108,28 @@ a.desc:after {
     background-color: #D3F3FD;
 
 }
+
+.form-tag {
+    max-height: 550px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    padding-right: 5px;
+}
+
+.hl-area{
+    font-family: Menlo, Monaco, Consolas, "Courier New", monospace;
+    display: block;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    font-size: 13px;
+    line-height: 1.42857143;
+    color: #333;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+.pn-pn input{
+    width: 167px !important;
+}
